--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,17 @@
 ---
 import { graphQLClient, gql } from '../lib/graphql';
 
-const GET_POSTS = gql`
-  query GetPosts {
-    posts {
+const GET_DISENDARKENMENT_POSTS = gql`
+  query GetDisendarkenmentPosts {
+    posts(where: { categoryName: "Disendarkenment Journeys" }) {
       nodes {
         title
         uri
+        categories {
+          nodes {
+            name
+          }
+        }
       }
     }
   }
@@ -14,10 +19,10 @@ const GET_POSTS = gql`
 
 let posts = [];
 try {
-  const data = await graphQLClient.request(GET_POSTS);
+  const data = await graphQLClient.request(GET_DISENDARKENMENT_POSTS);
   posts = data.posts.nodes;
 } catch (error) {
-  console.error("Error fetching posts:", error);
+  console.error("Error fetching posts for disendarkenment.com:", error);
 }
 ---
 
@@ -37,11 +42,14 @@ try {
 				{posts.map((post) => (
 					<li>
 						<a href={post.uri}>{post.title}</a>
+						{post.categories && post.categories.nodes.length > 0 && (
+							<span> ({post.categories.nodes.map(cat => cat.name).join(', ')})</span>
+						)}
 					</li>
 				))}
 			</ul>
 		) : (
-			<p>No posts found. Please add some posts in your WordPress CMS.</p>
+			<p>No posts found. Please add some posts in your WordPress CMS with the category "Disendarkenment Journeys".</p>
 		)}
 	</body>
 </html>
