--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
 import { graphQLClient, gql } from '../lib/graphql';
 
 const GET_DISENDARKENMENT_POSTS = gql`
@@ -26,30 +27,21 @@ try {
 }
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Disendarkenment - Blog</title>
-	</head>
-	<body>
-		<h1>Welcome to Disendarkenment Blog</h1>
+<BaseLayout title="Disendarkenment - Blog">
+	<h1>Welcome to Disendarkenment Blog</h1>
 
-		{posts.length > 0 ? (
-			<ul>
-				{posts.map((post) => (
-					<li>
-						<a href={post.uri}>{post.title}</a>
-						{post.categories && post.categories.nodes.length > 0 && (
-							<span> ({post.categories.nodes.map(cat => cat.name).join(', ')})</span>
-						)}
-					</li>
-				))}
-			</ul>
-		) : (
-			<p>No posts found. Please add some posts in your WordPress CMS with the category "Disendarkenment Journeys".</p>
-		)}
-	</body>
-</html>
+	{posts.length > 0 ? (
+		<ul>
+			{posts.map((post) => (
+				<li>
+					<a href={post.uri}>{post.title}</a>
+					{post.categories && post.categories.nodes.length > 0 && (
+						<span> ({post.categories.nodes.map(cat => cat.name).join(', ')})</span>
+					)}
+				</li>
+			))}
+		</ul>
+	) : (
+		<p>No posts found. Please add some posts in your WordPress CMS with the category "Disendarkenment Journeys".</p>
+	)}
+</BaseLayout>
