updated headline and category string

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,9 +27,9 @@ try {
 }
 ---
 
-<BaseLayout title="Disendarkenment - Blog">
+<BaseLayout title="Disendarkenment">
 	<header>
-		<h1>Welcome to Disendarkenment Blog</h1>
+		<h1>Welcome to Disendarkenment</h1>
 	</header>
 
 	<main class="container">
