--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -5,15 +5,15 @@ import { graphQLClient, gql } from '../../lib/graphql';
 export async function getStaticPaths() {
   const GET_ALL_POST_SLUGS = gql`
     query GetAllPostSlugs {
-      posts {
+      posts(where: { tagSlugIn: ["disendarkenment", "all"] }) {
         nodes {
           uri
         }
       }
     }
   `;
-  const data = await graphQLClient.request(GET_ALL_POST_SLUGS);
-  return data.posts.nodes.map((post) => ({
+  const data: any = await graphQLClient.request(GET_ALL_POST_SLUGS);
+  return data.posts.nodes.map((post: any) => ({
     params: { slug: post.uri.replace(/\/$/, '') },
   }));
 }
@@ -46,17 +46,17 @@ const GET_SINGLE_POST = gql`
 const { slug } = Astro.params;
 const uri = `/${slug}/`;
 
-let post = null;
-let allPosts = [];
+let post: any = null;
+let allPosts: any[] = [];
 
 try {
-  const data = await graphQLClient.request(GET_SINGLE_POST, { uri });
+  const data: any = await graphQLClient.request(GET_SINGLE_POST, { uri });
   post = data.postBy;
 
   // Fetch all posts to determine previous/next and sidebar
   const GET_ALL_POSTS = gql`
     query GetAllPosts {
-      posts(first: 100) { # Fetch a reasonable number of posts
+      posts(first: 100, where: { tagSlugIn: ["disendarkenment", "all"] }) { # Fetch a reasonable number of posts
         nodes {
           title
           uri
@@ -69,7 +69,7 @@ try {
       }
     }
   `;
-  const allPostsData = await graphQLClient.request(GET_ALL_POSTS);
+  const allPostsData: any = await graphQLClient.request(GET_ALL_POSTS);
   allPosts = allPostsData.posts.nodes;
 
 } catch (error) {
@@ -81,11 +81,11 @@ if (!post) {
 }
 
 // Logic for previous/next posts and sidebar (to be implemented)
-const currentPostIndex = allPosts.findIndex(p => p.uri === uri);
+const currentPostIndex = allPosts.findIndex((p: any) => p.uri === uri);
 const prevPost = currentPostIndex > 0 ? allPosts[currentPostIndex - 1] : null;
 const nextPost = currentPostIndex < allPosts.length - 1 ? allPosts[currentPostIndex + 1] : null;
 
-const sidebarPosts = allPosts.filter(p => p.uri !== uri).slice(0, 5); // Get 5 other posts for sidebar
+const sidebarPosts = allPosts.filter((p: any) => p.uri !== uri).slice(0, 5); // Get 5 other posts for sidebar
 ---
 
 <BaseLayout title={post.title}>
@@ -129,7 +129,7 @@ const sidebarPosts = allPosts.filter(p => p.uri !== uri).slice(0, 5); // Get 5 o
     <aside class="lg:w-1/4 bg-white rounded-lg shadow-lg p-6">
       <h3 class="text-2xl font-bold mb-4">Recent Posts</h3>
       <ul>
-        {sidebarPosts.map((p) => (
+        {sidebarPosts.map((p: any) => (
           <li class="mb-2">
             <a href={`/posts/${p.uri.replace(/\/$/, '')}`} class="text-blue-600 hover:underline">{p.title}</a>
           </li>
