--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,7 +25,7 @@ const defaultStructuredData = {
 	"@type": "LocalBusiness",
 	"name": "Disendarkenment",
 	"description": description,
-	"url": "https://disendarkenment.com",
+	"url": "https://disendarkenment.netlify.app",
 	"telephone": "+1-555-0123",
 	"email": "info@disendarkenment.com",
 	"address": {
