--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -699,8 +699,8 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 						<strong>You can also contact us directly:</strong>
 					</p>
 					<p class="text-sm text-gray-600">
-						Email: info@disendarkenment.com<br>
-						Phone: (555) 123-4567
+						Email: wayne@disendarkenment.com<br>
+						Phone: (904) 561-0301
 					</p>
 				</div>
 				<button
