Fix post filtering to show all posts instead of only tagged posts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { graphQLClient, gql } from '../lib/graphql';
 
 const GET_POSTS = gql`
   query GetPosts {
-    posts(where: { tagSlugIn: ["disendarkenment", "all"] }) {
+    posts(first: 6, where: { orderby: { field: DATE, order: DESC } }) {
       nodes {
         title
         uri
