--- a/src/pages/insights.astro
+++ b/src/pages/insights.astro
@@ -5,7 +5,7 @@ import { graphQLClient, gql } from '../lib/graphql';
 // Fetch all posts for the insights page
 const GET_ALL_POSTS = gql`
   query GetAllPosts {
-    posts(first: 20, where: { tagSlugIn: ["disendarkenment", "all"], orderby: { field: DATE, order: DESC } }) {
+    posts(first: 20, where: { orderby: { field: DATE, order: DESC } }) {
       nodes {
         title
         excerpt
