--- a/src/components/QuizModal.astro
+++ b/src/components/QuizModal.astro
@@ -10,7 +10,7 @@ const {
 } = Astro.props;
 ---
 
-<div class="modal-quiz-container">
+<div class="quiz-modal-container">
   <!-- Trigger Button -->
   <button 
     class={`quiz-trigger ${triggerClass}`}
@@ -49,7 +49,7 @@ const {
               style="width: 0%"
             ></div>
           </div>
-          <p class="text-sm mt-2" data-quiz-counter>Question 1 of 5</p>
+          <p class="text-sm mt-2" data-quiz-counter>Question 1 of 10</p>
         </div>
       </div>
 
@@ -120,7 +120,7 @@ const {
   // @ts-nocheck
   import { quizQuestions, calculateScore, formatScore } from '../lib/quiz-logic.js';
 
-  class ModalQuiz {
+  class QuizModal {
     constructor(container) {
       this.container = container;
       this.currentQuestionIndex = 0;
@@ -297,7 +297,7 @@ const {
       const counter = this.container.querySelector('[data-quiz-counter]');
       
       if (progressBar) {
-        const percentage = ((this.currentQuestionIndex + 1) / this.questions.length) * 100;
+        const percentage = ((this.currentQuestionIndex + 1) / quizQuestions.length) * 100;
         progressBar.style.width = `${percentage}%`;
       }
       
@@ -327,14 +327,12 @@ const {
     }
   }
 
-  // Initialize all modal quizzes on the page
+  // Initialize all quiz modals on the page
   document.addEventListener('DOMContentLoaded', () => {
-    const containers = document.querySelectorAll('.modal-quiz-container');
+    const containers = document.querySelectorAll('.quiz-modal-container');
     containers.forEach(container => {
-      container.__quizInstance = new ModalQuiz(container);
+      container.__quizInstance = new QuizModal(container);
     });
   });
 
-  // Make it globally available
-  window.ModalQuiz = ModalQuiz;
-</script>
+ 
